# Claim-Edits

./: .replit  conflicts_gpt.py  database.md  extract_contents.py  generate_claim_edits.py  init_db.py  main.py  models.py  pyproject.toml  summarize_input.py
migrations/versions/: 82cf2013e180_add_claimedit_model.py  93b9d3934039_add_document_type_column_to_inputs_table.py  e54229a48d0b_allow_null_values_for_document_name.py
static/: script.js  styles.css
templates/: claim_edits.html  conflicts.html  header.html  input_contents.html  inputs.html
